# FindIt

./: CMakeLists.txt  Testing.xlsx  readme.txt  requirements.txt
Dlls/: sqlite3.lib
FindIt/: CMakeLists.txt  Code.cpp  Code.h  Main.cpp  Main.h
Testing/: CMakeLists.txt  TestingMain.cpp
Testing/Modules/: DateTime.cpp  DriveOperations.cpp  FileTests.cpp  FolderManager.cpp  FolderTests.cpp  Misc.cpp  ToScanQueue.cpp
Testing/TestClasses/: FilesT.cpp  FilesT.h
